--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: EVKey - Vietnamese Keyboard
+title: EVKey
 description: Vietnamese Keyboard - Bộ gõ tiếng Việt cho Windows
 
 # User settings
